# Work_OCR

./: .gitignore  AGENTS.md  GEMINI.md  README.md  app.py  capture.py  compare_ocr.py  layout.py  manual_test.py  ocr_engine.py  postprocess.py  pyproject.toml  requirements.txt
WorkOCR_Core/: requirements.txt
WorkOCR_Core/src/work_ocr/: app.py  capture.py  layout.py  ocr_engine.py
assets/test_images/: current_data.xlsx  test_pic2_code.txt  test_pic2_heavy_data_anwser.txt
docs/: Changes.txt
docs/prompt/code_prompt/: Changes.txt  mode_switching_prompt.md  ocr_engine.py.prompt.md  plan.md
prompt/: needs.txt  needs_backup.txt  post_process_case.txt
prompt/code_prompt/: app.py.prompt.md  capture.py.prompt.md  layout.py.prompt.md  plan.md  postprocess.py.prompt.md
scripts/: manual_test.py
src/work_ocr/: __init__.py  __main__.py  app.py  capture.py  hotkey_manager.py  layout.py  ocr_engine.py  postprocess.py
test_pic/: current_data.xlsx  test_pic1_data_table_anwser.txt
tests/: test_app.py  test_capture.py  test_hotkey_manager.py  test_layout.py  test_ocr_accuracy.py  test_ocr_engine.py  test_postprocess.py
tests/test_data/postprocess/: scenario3_split_only.txt  scenario4_engineering_notation.txt
