[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "work-ocr"
version = "1.0.0"
description = "A desktop OCR application for Windows 11 with focus on table data extraction"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Work OCR Team"}
]
keywords = ["ocr", "rapidocr", "table-extraction", "screenshot", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

dependencies = [
    "rapidocr-onnxruntime",
    "PySide6>=6.0",
    "opencv-contrib-python>=4.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "keyboard>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-cov>=4.0",
]

[project.scripts]
work-ocr = "work_ocr.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/work-ocr"
Issues = "https://github.com/yourusername/work-ocr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
work_ocr = ["*.json", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
pythonpath = ["src"]
